[gd_scene load_steps=3 format=2]

[ext_resource path="res://Maps/Test_Map/Assest/Test_Map_Background.png" type="Texture" id=1]
[ext_resource path="res://Boring_Nodes/Level_Select/Previews/Test_Map/Test_Map_Preview.gd" type="Script" id=2]

[node name="Test_Map_Preview" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 235.5, 104 )
scale = Vector2( 0.46, 0.347 )
texture = ExtResource( 1 )

[node name="TextureButton" type="TextureButton" parent="Sprite"]
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0

[connection signal="mouse_entered" from="Sprite/TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="Sprite/TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="Sprite/TextureButton" to="." method="_on_TextureButton_pressed"]
